--- a/tkinter app (kursACH).ipynb
+++ b/tkinter app (kursACH).ipynb
@@ -14,19 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TclError",
-     "evalue": "can't invoke \"destroy\" command: application has been destroyed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTclError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-422196372371>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[0mroot\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m \u001b[0mapp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mApp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m \u001b[0mroot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# only for debug\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\zeruk\\appdata\\local\\programs\\python\\python36-32\\lib\\tkinter\\__init__.py\u001b[0m in \u001b[0;36mdestroy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2054\u001b[0m         end the application of this Tcl interpreter.\"\"\"\n\u001b[0;32m   2055\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2056\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'destroy'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_w\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2057\u001b[0m         \u001b[0mMisc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdestroy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2058\u001b[0m         \u001b[1;32mglobal\u001b[0m \u001b[0m_default_root\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTclError\u001b[0m: can't invoke \"destroy\" command: application has been destroyed"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-40.0, -40.0], [260.0, -40.0], [260.0, 540.0], [560.0, 540.0]]\n",
+      "1 / 4 [2.5, 0.0]\n",
+      "2 / 4 [0.0, 2.5]\n",
+      "3 / 4 [2.5, 0.0]\n",
+      "bye\n"
      ]
     }
    ],
@@ -180,10 +179,11 @@
     "                self.master.update()\n",
     "            xy_node_no+=1\n",
     "            print(xy_node_no, '/', len(xy), speed_vec)\n",
-    "        self.bitmap=self.bitmap/np.max(self.bitmap)\n",
-    "        self.bitmap = 255-255*self.bitmap\n",
-    "        g = np.asarray(dtype=np.dtype('uint8'), a=self.bitmap)\n",
-    "        Image.fromarray(g, mode='L').convert('1').save('painter.png')\n",
+    "        np.savetxt('bitmap_normalized.txt', self.bitmap / np.max(self.bitmap))\n",
+    "        np.savetxt('bitmap_before.txt',self.bitmap)\n",
+    "        self.bitmap=255 - self.bitmap / np.max(self.bitmap) * 255\n",
+    "        np.savetxt('bitmap_after.txt',self.bitmap)\n",
+    "        Image.fromarray(np.uint8(self.bitmap), 'L').save('painter.png')\n",
     "        print('bye')\n",
     "        \n",
     "                \n",
@@ -195,7 +195,7 @@
     "    def compute_outlet_line(self, variant = 0, step = 20, overlay = 20):\n",
     "        if (variant == 0):\n",
     "            xy=[]\n",
-    "            x = -2*step\n",
+    "            x = -overlay\n",
     "            while(x<500+overlay):\n",
     "                xy.append([x,-overlay])\n",
     "                x+=step\n",
@@ -250,10 +250,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "\n",
+    "# gradient between 0 and 1 for 256*256\n",
+    "array = np.linspace(0,1,256*256)\n",
+    "\n",
+    "# reshape to 2d\n",
+    "mat = np.reshape(array,(256,256))\n",
+    "\n",
+    "# Creates PIL image\n",
+    "img = Image.fromarray(np.uint8(mat * 255) , 'L')\n",
+    "img.show()"
+   ]
   },
   {
    "cell_type": "code",
